--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "random_play"
-version = "0.2.3"
+version = "0.3.0"
 authors = ["LJason <ljason@ljason.cn>"]
-edition = "2018"
+edition = "2021"
 repository = "https://github.com/LJason77/RandomPlay.git"
+readme = "README.md"
 
 [profile.release]
 codegen-units = 1
@@ -12,4 +13,3 @@ panic = "abort"
 
 [dependencies]
 rand = "0.8"
-diesel = { git = "https://github.com/diesel-rs/diesel", version = "2.0", features = ["sqlite"] }
